--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.26.0"
 pytest = "^6.2.5"
 argparse = "^1.4.0"
 flake8 = "^3.9.2"
+pytest-cov = "^2.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
