--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.26.0"
+beautifulsoup4 = "^4.10.0"
+progress = "^1.6"
+python-magic = "^0.4.24"
+lxml = "^4.6.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
