--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.26.0"
 beautifulsoup4 = "^4.10.0"
 progress = "^1.6"
 lxml = "^4.6.3"
+requests-mock = "^1.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
